--- a/notebooks/cicero_net_model.ipynb
+++ b/notebooks/cicero_net_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "87929292",
    "metadata": {},
    "outputs": [],
@@ -108,6 +108,50 @@
     "rmse = np.sqrt(mean_squared_error(y_target_numpy, y_pred_numpy))\n",
     "r2   = r2_score(y_target_numpy, y_pred_numpy)\n",
     "print(f\"RMSE: {rmse}, R2: {r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8ff05c6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.7520866 , 0.79316556, 0.8267474 , 0.86013377, 0.89149326,\n",
+       "       0.9225807 , 0.9528859 , 0.976506  ], dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_numpy[:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c7098c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.75238365, 0.792697  , 0.826542  , 0.85973126, 0.89088327,\n",
+       "       0.9233676 , 0.95238334, 0.9760593 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_target_numpy[:8]"
    ]
   },
   {
