--- a/marl_experiment.ipynb
+++ b/marl_experiment.ipynb
@@ -10,10 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-12 16:32:08,061\tINFO worker.py:1951 -- Started a local Ray instance.\n",
-      "2025-09-12 16:32:08,137\tINFO packaging.py:588 -- Creating a file package for local module '/home/obola/repositories/cicero-scm-surrogate'.\n",
-      "2025-09-12 16:32:08,251\tINFO packaging.py:380 -- Pushing file package 'gcs://_ray_pkg_19902c8f29bcc810.zip' (15.83MiB) to Ray cluster...\n",
-      "2025-09-12 16:32:08,305\tINFO packaging.py:393 -- Successfully pushed file package 'gcs://_ray_pkg_19902c8f29bcc810.zip'.\n"
+      "2025-09-16 11:57:32,462\tINFO worker.py:1951 -- Started a local Ray instance.\n",
+      "2025-09-16 11:57:32,595\tINFO packaging.py:588 -- Creating a file package for local module '/home/obola/repositories/cicero-scm-surrogate'.\n",
+      "2025-09-16 11:57:32,720\tINFO packaging.py:380 -- Pushing file package 'gcs://_ray_pkg_9d0cb22151206cc6.zip' (15.87MiB) to Ray cluster...\n",
+      "2025-09-16 11:57:32,772\tINFO packaging.py:393 -- Successfully pushed file package 'gcs://_ray_pkg_9d0cb22151206cc6.zip'.\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.36678624153137207\n",
+      "Time: 0.34892773628234863\n",
       "Temperature: 0.7520427266712681\n"
      ]
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "01a9182f",
    "metadata": {},
    "outputs": [],
@@ -224,6 +224,9 @@
     "        self.em_df.loc[next_year] = e\n",
     "        self.current_year = next_year\n",
     "\n",
+    "        print(f\"SCM input emissions: {self.em_df.tail(5)}\")\n",
+    "\n",
+    "\n",
     "        # Build scenario and run SCM (time just the engine)\n",
     "        scenario = self._build_scenario()\n",
     "        cscm = CICEROSCM(scenario)\n",
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7e833c4b",
    "metadata": {},
    "outputs": [
@@ -249,19 +252,184 @@
      "output_type": "stream",
      "text": [
       "Year: 0\n",
-      "Time: 0.4052009582519531\n",
+      "SCM input emissions:              CO2_FF  CO2_AFOLU         CH4       N2O        SO2     CFC-11  \\\n",
+      "Component                                                                    \n",
+      "2012       9.380966   0.970101  380.809767  6.737719  57.950458  70.235225   \n",
+      "2013       9.653547   0.918101  381.594393  6.842754  57.438737  75.740842   \n",
+      "2014       9.713339   1.095101  387.873539  6.910956  57.118340  54.936500   \n",
+      "2015       9.718714   0.959302  388.072796  6.932400  50.486355  43.573400   \n",
+      "2016       9.814324   0.945227  388.076355  6.986187  48.413212  41.880821   \n",
+      "\n",
+      "              CFC-12   CFC-113   CFC-114   CFC-115  ...        CF4       SF6  \\\n",
+      "Component                                           ...                        \n",
+      "2012       53.358780  5.452927  2.052052  0.716861  ...   9.660946  7.706284   \n",
+      "2013       54.819887  6.516793  1.940862  0.613303  ...   8.302744  7.686158   \n",
+      "2014       28.961200  2.802400  1.669600  1.114899  ...   9.873500  7.878400   \n",
+      "2015       14.609600  0.874200  1.669600  1.671400  ...  10.869900  8.020000   \n",
+      "2016       12.887740  0.781560  1.515231  1.614221  ...  10.851960  8.043140   \n",
+      "\n",
+      "                 NOx          CO       NMVOC        NH3  BMB_AEROS_BC  \\\n",
+      "Component                                                               \n",
+      "2012       48.104956  949.602218  229.106936  63.848454      1.595843   \n",
+      "2013       47.435417  901.238757  219.381179  63.650977      1.366195   \n",
+      "2014       47.314629  964.047618  233.525518  65.036854      1.538625   \n",
+      "2015       47.278217  934.349885  227.244819  65.279703      1.561100   \n",
+      "2016       46.825176  923.983704  225.566879  65.634377      1.555221   \n",
+      "\n",
+      "           BMB_AEROS_OC        BC         OC  \n",
+      "Component                                     \n",
+      "2012          15.946882  8.109443  19.880020  \n",
+      "2013          13.100500  8.194359  20.145065  \n",
+      "2014          15.876070  8.205754  20.269752  \n",
+      "2015          14.289874  8.166324  20.456151  \n",
+      "2016          14.234977  7.991022  20.244795  \n",
+      "\n",
+      "[5 rows x 40 columns]\n",
+      "Time: 0.38201069831848145\n",
       "Temperature: 0.7945743213966652\n",
       "Year: 1\n",
-      "Time: 0.3904879093170166\n",
+      "SCM input emissions:              CO2_FF  CO2_AFOLU         CH4       N2O        SO2     CFC-11  \\\n",
+      "Component                                                                    \n",
+      "2013       9.653547   0.918101  381.594393  6.842754  57.438737  75.740842   \n",
+      "2014       9.713339   1.095101  387.873539  6.910956  57.118340  54.936500   \n",
+      "2015       9.718714   0.959302  388.072796  6.932400  50.486355  43.573400   \n",
+      "2016       9.814324   0.945227  388.076355  6.986187  48.413212  41.880821   \n",
+      "2017       9.909934   0.931152  388.079895  7.039974  46.340065  40.188240   \n",
+      "\n",
+      "              CFC-12   CFC-113   CFC-114   CFC-115  ...        CF4       SF6  \\\n",
+      "Component                                           ...                        \n",
+      "2013       54.819887  6.516793  1.940862  0.613303  ...   8.302744  7.686158   \n",
+      "2014       28.961200  2.802400  1.669600  1.114899  ...   9.873500  7.878400   \n",
+      "2015       14.609600  0.874200  1.669600  1.671400  ...  10.869900  8.020000   \n",
+      "2016       12.887740  0.781560  1.515231  1.614221  ...  10.851960  8.043140   \n",
+      "2017       11.165880  0.688920  1.360863  1.557043  ...  10.834021  8.066280   \n",
+      "\n",
+      "                 NOx          CO       NMVOC        NH3  BMB_AEROS_BC  \\\n",
+      "Component                                                               \n",
+      "2013       47.435417  901.238757  219.381179  63.650977      1.366195   \n",
+      "2014       47.314629  964.047618  233.525518  65.036854      1.538625   \n",
+      "2015       47.278217  934.349885  227.244819  65.279703      1.561100   \n",
+      "2016       46.825176  923.983704  225.566879  65.634377      1.555221   \n",
+      "2017       46.372135  913.617493  223.888947  65.989044      1.549342   \n",
+      "\n",
+      "           BMB_AEROS_OC        BC         OC  \n",
+      "Component                                     \n",
+      "2013          13.100500  8.194359  20.145065  \n",
+      "2014          15.876070  8.205754  20.269752  \n",
+      "2015          14.289874  8.166324  20.456151  \n",
+      "2016          14.234977  7.991022  20.244795  \n",
+      "2017          14.180080  7.815720  20.033440  \n",
+      "\n",
+      "[5 rows x 40 columns]\n",
+      "Time: 0.37724876403808594\n",
       "Temperature: 0.8315334241383018\n",
       "Year: 2\n",
-      "Time: 0.3943440914154053\n",
+      "SCM input emissions:               CO2_FF  CO2_AFOLU         CH4       N2O        SO2     CFC-11  \\\n",
+      "Component                                                                     \n",
+      "2014        9.713339   1.095101  387.873539  6.910956  57.118340  54.936500   \n",
+      "2015        9.718714   0.959302  388.072796  6.932400  50.486355  43.573400   \n",
+      "2016        9.814324   0.945227  388.076355  6.986187  48.413212  41.880821   \n",
+      "2017        9.909934   0.931152  388.079895  7.039974  46.340065  40.188240   \n",
+      "2018       10.005543   0.917077  388.083466  7.093760  44.266922  38.495659   \n",
+      "\n",
+      "             CFC-12  CFC-113   CFC-114   CFC-115  ...        CF4      SF6  \\\n",
+      "Component                                         ...                       \n",
+      "2014       28.96120  2.80240  1.669600  1.114899  ...   9.873500  7.87840   \n",
+      "2015       14.60960  0.87420  1.669600  1.671400  ...  10.869900  8.02000   \n",
+      "2016       12.88774  0.78156  1.515231  1.614221  ...  10.851960  8.04314   \n",
+      "2017       11.16588  0.68892  1.360863  1.557043  ...  10.834021  8.06628   \n",
+      "2018        9.44402  0.59628  1.206494  1.499864  ...  10.816081  8.08942   \n",
+      "\n",
+      "                 NOx          CO       NMVOC        NH3  BMB_AEROS_BC  \\\n",
+      "Component                                                               \n",
+      "2014       47.314629  964.047618  233.525518  65.036854      1.538625   \n",
+      "2015       47.278217  934.349885  227.244819  65.279703      1.561100   \n",
+      "2016       46.825176  923.983704  225.566879  65.634377      1.555221   \n",
+      "2017       46.372135  913.617493  223.888947  65.989044      1.549342   \n",
+      "2018       45.919094  903.251343  222.211014  66.343712      1.543463   \n",
+      "\n",
+      "           BMB_AEROS_OC        BC         OC  \n",
+      "Component                                     \n",
+      "2014          15.876070  8.205754  20.269752  \n",
+      "2015          14.289874  8.166324  20.456151  \n",
+      "2016          14.234977  7.991022  20.244795  \n",
+      "2017          14.180080  7.815720  20.033440  \n",
+      "2018          14.125184  7.640418  19.822084  \n",
+      "\n",
+      "[5 rows x 40 columns]\n",
+      "Time: 0.3783855438232422\n",
       "Temperature: 0.8684077734213573\n",
       "Year: 3\n",
-      "Time: 0.3804142475128174\n",
+      "SCM input emissions:               CO2_FF  CO2_AFOLU         CH4       N2O        SO2     CFC-11  \\\n",
+      "Component                                                                     \n",
+      "2015        9.718714   0.959302  388.072796  6.932400  50.486355  43.573400   \n",
+      "2016        9.814324   0.945227  388.076355  6.986187  48.413212  41.880821   \n",
+      "2017        9.909934   0.931152  388.079895  7.039974  46.340065  40.188240   \n",
+      "2018       10.005543   0.917077  388.083466  7.093760  44.266922  38.495659   \n",
+      "2019       10.101152   0.903002  388.087006  7.147548  42.193779  36.803082   \n",
+      "\n",
+      "             CFC-12  CFC-113   CFC-114   CFC-115  ...        CF4      SF6  \\\n",
+      "Component                                         ...                       \n",
+      "2015       14.60960  0.87420  1.669600  1.671400  ...  10.869900  8.02000   \n",
+      "2016       12.88774  0.78156  1.515231  1.614221  ...  10.851960  8.04314   \n",
+      "2017       11.16588  0.68892  1.360863  1.557043  ...  10.834021  8.06628   \n",
+      "2018        9.44402  0.59628  1.206494  1.499864  ...  10.816081  8.08942   \n",
+      "2019        7.72216  0.50364  1.052126  1.442686  ...  10.798141  8.11256   \n",
+      "\n",
+      "                 NOx          CO       NMVOC        NH3  BMB_AEROS_BC  \\\n",
+      "Component                                                               \n",
+      "2015       47.278217  934.349885  227.244819  65.279703      1.561100   \n",
+      "2016       46.825176  923.983704  225.566879  65.634377      1.555221   \n",
+      "2017       46.372135  913.617493  223.888947  65.989044      1.549342   \n",
+      "2018       45.919094  903.251343  222.211014  66.343712      1.543463   \n",
+      "2019       45.466053  892.885132  220.533066  66.698380      1.537584   \n",
+      "\n",
+      "           BMB_AEROS_OC        BC         OC  \n",
+      "Component                                     \n",
+      "2015          14.289874  8.166324  20.456151  \n",
+      "2016          14.234977  7.991022  20.244795  \n",
+      "2017          14.180080  7.815720  20.033440  \n",
+      "2018          14.125184  7.640418  19.822084  \n",
+      "2019          14.070288  7.465116  19.610727  \n",
+      "\n",
+      "[5 rows x 40 columns]\n",
+      "Time: 0.37917518615722656\n",
       "Temperature: 0.90415658042691\n",
       "Year: 4\n",
-      "Time: 0.3816502094268799\n",
+      "SCM input emissions:               CO2_FF  CO2_AFOLU         CH4       N2O        SO2     CFC-11  \\\n",
+      "Component                                                                     \n",
+      "2016        9.814324   0.945227  388.076355  6.986187  48.413212  41.880821   \n",
+      "2017        9.909934   0.931152  388.079895  7.039974  46.340065  40.188240   \n",
+      "2018       10.005543   0.917077  388.083466  7.093760  44.266922  38.495659   \n",
+      "2019       10.101152   0.903002  388.087006  7.147548  42.193779  36.803082   \n",
+      "2020       10.196762   0.888928  388.090576  7.201334  40.120636  35.110500   \n",
+      "\n",
+      "             CFC-12  CFC-113   CFC-114   CFC-115  ...        CF4      SF6  \\\n",
+      "Component                                         ...                       \n",
+      "2016       12.88774  0.78156  1.515231  1.614221  ...  10.851960  8.04314   \n",
+      "2017       11.16588  0.68892  1.360863  1.557043  ...  10.834021  8.06628   \n",
+      "2018        9.44402  0.59628  1.206494  1.499864  ...  10.816081  8.08942   \n",
+      "2019        7.72216  0.50364  1.052126  1.442686  ...  10.798141  8.11256   \n",
+      "2020        6.00030  0.41100  0.897757  1.385507  ...  10.780201  8.13570   \n",
+      "\n",
+      "                 NOx          CO       NMVOC        NH3  BMB_AEROS_BC  \\\n",
+      "Component                                                               \n",
+      "2016       46.825176  923.983704  225.566879  65.634377      1.555221   \n",
+      "2017       46.372135  913.617493  223.888947  65.989044      1.549342   \n",
+      "2018       45.919094  903.251343  222.211014  66.343712      1.543463   \n",
+      "2019       45.466053  892.885132  220.533066  66.698380      1.537584   \n",
+      "2020       45.013012  882.518982  218.855133  67.053055      1.531705   \n",
+      "\n",
+      "           BMB_AEROS_OC        BC         OC  \n",
+      "Component                                     \n",
+      "2016          14.234977  7.991022  20.244795  \n",
+      "2017          14.180080  7.815720  20.033440  \n",
+      "2018          14.125184  7.640418  19.822084  \n",
+      "2019          14.070288  7.465116  19.610727  \n",
+      "2020          14.015390  7.289814  19.399372  \n",
+      "\n",
+      "[5 rows x 40 columns]\n",
+      "Time: 0.383056640625\n",
       "Temperature: 0.9394239810981585\n"
      ]
     }
