new marl and new data generation and new surrogate

--- a/ciceroscm/notebooks/CSCM_surrogate_data.ipynb
+++ b/ciceroscm/notebooks/CSCM_surrogate_data.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "92fb3d63",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
     "conc_data = input_handler.read_inputfile(\n",
     "    os.path.join(test_data_dir, \"ssp245_conc_RCMIP.txt\"), True, 1750, 2100\n",
     ")\n",
-    "ih = input_handler.InputHandler({\"nyend\": 2050, \"nystart\": 1900, \"emstart\": 2015})\n",
+    "ih = input_handler.InputHandler({\"nyend\": 2075, \"nystart\": 1900, \"emstart\": 2015})\n",
     "em_data = ih.read_emissions(os.path.join(test_data_dir, \"ssp245_em_RCMIP.txt\"))\n",
     "nat_ch4_data = input_handler.read_natural_emissions(\n",
     "    os.path.join(test_data_dir, \"natemis_ch4.txt\"), \"CH4\"\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "7cd3d377",
    "metadata": {},
    "outputs": [],
@@ -180,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "6e488be2",
    "metadata": {},
    "outputs": [],
    "source": [
     "emstart_year = 2015\n",
-    "nyend        = 2050\n",
+    "nyend        = 2075\n",
     "scenarios    = []\n",
     "\n",
     "# Default: ultra-tight ±0.5 %\n",
@@ -223,9 +223,9 @@
     "    scale_df = pd.DataFrame(delta, index=years_future, columns=gas_cols)\n",
     "    # --- 3) build absolute emissions path ---------------------------------\n",
     "    em_scaled = em_data.copy()\n",
-    "    for t in years_future:\n",
-    "        gfactor = growth_base.loc[t] * scale_df.loc[t]        # modified YoY\n",
-    "        em_scaled.loc[t] = em_scaled.loc[t-1] * gfactor       # E_t = E_{t-1}·g\n",
+    "    # for t in years_future:\n",
+    "    #     gfactor = growth_base.loc[t] * scale_df.loc[t]        # modified YoY\n",
+    "    #     em_scaled.loc[t] = em_scaled.loc[t-1] * gfactor       # E_t = E_{t-1}·g\n",
     "\n",
     "    # --- 4) package scenario dict -----------------------------------------\n",
     "    new_scen = {\n",
@@ -254,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "8a638733",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2aec50e74e3407f9a425f10665db5fe",
+       "model_id": "710ccf2d8e7e4d078df356e4778eb51b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total time for the run: 0.5938589572906494\n"
+      "Total time for the run: 0.6745095252990723\n"
      ]
     }
    ],
@@ -291,6 +291,16 @@
     "end_time = time.time()\n",
     "\n",
     "print(f\"Total time for the run: {end_time-start_time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d50ca382",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.to_csv(\"baseline_results_v2.csv\")"
    ]
   },
   {
