--- a/notebooks/emission_baseline_models.ipynb
+++ b/notebooks/emission_baseline_models.ipynb
@@ -47,14 +47,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250805_152136/processed/X_train.npy\"\n",
-    "y_train_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250805_152136/processed/y_train.npy\"\n",
+    "X_train_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250926_110035/processed/X_train.npy\"\n",
+    "y_train_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250926_110035/processed/y_train.npy\"\n",
     "\n",
-    "X_val_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250805_152136/processed/X_val.npy\"\n",
-    "y_val_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250805_152136/processed/y_val.npy\"\n",
+    "X_val_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250926_110035/processed/X_val.npy\"\n",
+    "y_val_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250926_110035/processed/y_val.npy\"\n",
     "\n",
-    "X_test_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250805_152136/processed/X_test.npy\"\n",
-    "y_test_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250805_152136/processed/y_test.npy\"\n",
+    "X_test_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250926_110035/processed/X_test.npy\"\n",
+    "y_test_dir = \"/home/obola/repositories/cicero-scm-surrogate/data/20250926_110035/processed/y_test.npy\"\n",
     "\n",
     "X_train = np.load(X_train_dir)\n",
     "y_train = np.load(y_train_dir)\n",
@@ -64,6 +64,27 @@
     "\n",
     "X_test = np.load(X_test_dir)\n",
     "y_test = np.load(y_test_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8039ab7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((854000, 66, 40), (183000, 66, 40), (183000, 66, 40))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, X_val.shape, X_test.shape"
    ]
   },
   {
