--- a/notebooks/rnn_based_surrogates.ipynb
+++ b/notebooks/rnn_based_surrogates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "87929292",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6dafbc74",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,16 +53,14 @@
     "device = \"cuda:0\"\n",
     "\n",
     "# Load and format data\n",
-    "X_train, y_train, X_val, y_val, X_test, y_test = load_processed_data(data_dir)\n",
-    "train_loader, val_loader, test_loader, G, mu, std = prepare_dataloaders(X_train, y_train, X_val, y_val, X_test, y_test, \n",
+    "X_train, y_train, X_val, y_val, X_test, y_test, mu, std = load_processed_data(data_dir)\n",
+    "train_loader, val_loader, test_loader, G = prepare_dataloaders(X_train, y_train, X_val, y_val, X_test, y_test, mu, std,\n",
     "                                                               batch_size=512, device=device, num_workers=2)\n",
     "\n",
     "# Build model\n",
-    "#model = GRUSurrogate(n_gas=G).to(device)\n",
+    "#model = GRUSurrogate(n_gas=G, hidden=128).to(device)\n",
     "model = LSTMSurrogate(n_gas=G, hidden=128, num_layers=1).to(device)\n",
-    "#model = TCNForecaster(n_gas=G, n_blocks=8, hidden=128, k=3).to(device)\n",
-    "\n",
-    "\n",
+    "#model = TCNForecaster(n_gas=G, n_blocks=1, hidden=128, k=3).to(device)\n",
     "\n",
     "model_dir = os.path.join(run_dir, \"training_runs/20251001_104419_lstm_128_1/model.pth\")\n",
     "model.load_state_dict(torch.load(model_dir, map_location=device, weights_only=False))"
@@ -78,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7c905ed7",
    "metadata": {},
    "outputs": [
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "28d6ab86",
    "metadata": {},
    "outputs": [
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "9ea8bbe8",
    "metadata": {},
    "outputs": [
@@ -167,23 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8213a92a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36482dfd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41f1251a",
+   "id": "a557b646",
    "metadata": {},
    "outputs": [],
    "source": []
